<resources>
    <string name="app_name">I2P</string>
    <string name="desc_i2p_logo">I2P logo</string>
    <string name="welcome_new_install">Welcome to I2P! This app is ALPHA software and it does not provide strong anonymity. Please read the release notes and license information.</string>
    <string name="welcome_new_version">New version installed. Please read the release notes. Version:</string>
    <string name="label_home">Controls and Status</string>
    <string name="label_tunnels">Tunnels</string>
    <string name="label_status">Status</string>
    <string name="label_addressbook">Addressbook</string>
    <string name="label_i2ptunnel">I2PTunnel</string>
    <string name="label_i2ptunnel_client">Client tunnels</string>
    <string name="label_i2ptunnel_server">Server tunnels</string>
    <string name="label_logs">Logs</string>
    <string name="label_error_logs">Error Logs</string>
    <string name="label_info_and_pages">Information and pages</string>
    <string name="label_welcome_page">Welcome Page</string>
    <string name="label_news">News</string>
    <string name="label_news_status">Latest I2P News</string>
    <string name="label_peers_status">Peers</string>
    <string name="label_release_notes">Release Notes</string>
    <string name="label_licenses">Licenses</string>
    <string name="label_nonanon_info">Non Anonymous Information</string>
    <string name="label_browse">Browse</string>
    <string name="label_graphs">Graphs</string>
    <string name="button_router_off">Long press to start I2P</string>
    <string name="button_router_on">I2P is running (long press to stop)</string>
    <string name="first_start_title">Congratulations on getting I2P installed!</string>
    <string name="first_start_welcome"><b>Welcome to I2P!</b> Please <b>have patience</b> as I2P boots up and finds peers.</string>
    <string name="first_start_read">While you are waiting, please read the release notes and welcome page.</string>
    <string name="first_start_faq">Once you have client tunnels, please <b>check out</b> our FAQ:</string>
    <string name="url_faq" translatable="false">http://i2p-projekt.i2p/en/faq</string>
    <string name="first_start_faq_nonanon">Or use this non-anonymous link if you don\'t want to wait for tunnels:</string>
    <string name="url_faq_nonanon" translatable="false">https://geti2p.net/en/faq</string>
    <string name="first_start_irc">Point your IRC client to <b>localhost:6668</b> and say hi to us on:</string>
    <string name="url_irc_i2p" translatable="false">irc://127.0.0.1:6668/i2p | irc://127.0.0.1:6668/i2p-dev</string>
    <string name="drawer_open">Open nav</string>
    <string name="drawer_close">Close nav</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_router_start">Start Router</string>
    <string name="action_router_stop">Stop Router</string>
    <string name="action_i2ptunnel_start">Start tunnel</string>
    <string name="action_i2ptunnel_stop">Stop tunnel</string>
    <string name="action_i2ptunnel_start_all">Start all tunnels</string>
    <string name="action_i2ptunnel_stop_all">Stop all tunnels</string>
    <string name="action_i2ptunnel_restart_all">Restart all tunnels</string>
    <string name="action_reload">Reload</string>
    <string name="action_refresh">Refresh</string>
    <string name="hint_search_addressbook">Search addressbook</string>
    <string name="action_reload_subscriptions">Reload subscriptions</string>
    <string name="router_not_running">The router is not running.</string>
    <string name="stats_not_ready">The statistics manager is not ready yet. Try again later.</string>
    <string name="graphs_not_ready">Graphs are not ready, or the router is not running. Try again later.</string>
    <string name="netdb_routers_empty">No routers in your NetDB.</string>
    <string name="netdb_leases_empty">No LeaseSets in your NetDB.</string>
    <string name="notification_status_bw">Bandwidth: %1$s KBps down / %2$s KBps up</string>
    <string name="notification_status_peers">Peers: %1$d active, %2$d known</string>
    <string name="notification_status_expl">Exploratory tunnels: %1$d/%2$d</string>
    <string name="notification_status_client">Client tunnels: %1$d/%2$d</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_enable">Enable</string>
    <string name="settings_desc_subscriptions">Subscription URLs</string>
    <string name="settings_label_bandwidth_net">Bandwidth and network</string>
    <string name="settings_label_bandwidth">Bandwidth</string>
    <string name="settings_label_bw_inbound">Inbound speed</string>
    <string name="settings_desc_bw_inbound">Maximum inbound speed</string>
    <string name="settings_label_bw_outbound">Outbound speed</string>
    <string name="settings_desc_bw_outbound">Maximum outbound speed</string>
    <string name="settings_label_network">Network</string>
    <string name="settings_label_hiddenMode">Participation</string>
    <string name="settings_desc_hiddenMode">Turn off hidden mode</string>
    <string name="settings_label_maxPartTunnels">Max participating tunnels</string>
    <string name="settings_desc_maxPartTunnels">Maximum tunnels to participate in (default=20)</string>
    <string name="settings_dialog_maxPartTunnels">Maximum tunnels to participate in</string>
    <string name="settings_label_sharePercent">Share percentage</string>
    <string name="settings_desc_sharePercent">Percentage of bandwidth to share (default=80)</string>
    <string name="settings_dialog_sharePercent">Percentage of bandwidth to share</string>
    <string name="settings_desc_upnp">Open firewall ports automatically</string>
    <string name="settings_label_logging">Logging</string>
    <string name="settings_label_default_log_level">Default log level</string>
    <string name="settings_label_advanced">Advanced</string>
    <string name="settings_label_showStats">Router statistics</string>
    <string name="settings_summ_showStats">Display advanced stats in main console</string>
    <string name="settings_label_transports">Transports</string>
    <string name="settings_label_maxConns">Max connections</string>
    <string name="settings_label_i2cp">I2CP interface</string>
    <string name="settings_desc_i2cp">Listen on port 7654</string>
    <string name="settings_label_exploratory_pool">Exploratory pool</string>
    <string name="settings_desc_exploratory_pool">Tunnel parameters</string>
    <string name="settings_label_expl_inbound">Inbound tunnels</string>
    <string name="settings_label_expl_outbound">Outbound tunnels</string>
    <string name="settings_label_expl_length">Length</string>
    <string name="settings_summ_expl_length">%s hops</string>
    <string name="settings_desc_expl_length">How many hops to use</string>
    <string name="settings_label_expl_lengthVariance">Hop variance</string>
    <string name="settings_summ_expl_lengthVariance">%s</string>
    <string name="settings_desc_expl_lengthVariance">How many hops to randomly add</string>
    <string name="settings_label_expl_quantity">Quantity</string>
    <string name="settings_summ_expl_quantity">%s tunnels</string>
    <string name="settings_desc_expl_quantity">How many tunnels</string>
    <string name="settings_label_expl_backupQuantity">Backup quantity</string>
    <string name="settings_summ_expl_backupQuantity">%s tunnels</string>
    <string name="settings_desc_expl_backupQuantity">How many tunnel backups</string>
    <string name="menu_about">About</string>
    <string name="about_version">Version:</string>
    <string name="about_project">Project Home:</string>
    <string name="url_project" translatable="false">https://geti2p.net | http://i2p-projekt.i2p</string>
    <string name="about_bugs">Bugs and Support:</string>
    <string name="url_android_forum" translatable="false">http://zzz.i2p/forums/17</string>
    <string name="about_helpwanted">Help Wanted!</string>
    <string name="about_volunteer">Want to help make the app better? Volunteer on the Android forum:</string>
    <string name="about_donate">Want to donate money or bitcoins to buy more Android devices for development and testing? Go to:</string>
    <string name="url_donate" translatable="false">https://geti2p.net/en/donate | http://i2p-projekt.i2p/en/donate</string>
    <string name="menu_help">Help</string>
    <string name="addressbook_search_header">%s found</string>
    <string name="addressbook_add_wizard_k_name">Name</string>
    <string name="addressbook_add_wizard_k_destination">Destination</string>
    <string name="addressbook_add_wizard_desc_name">The name</string>
    <string name="addressbook_add_wizard_desc_destination">Paste the B64 of the Destination here. If you have a File Manager installed, you can browse for a text file containing the B64.</string>
    <string name="nsu_iae_illegal_char">Host name \"%1$s\" contains illegal character %2$s</string>
    <string name="nsu_iae_cannot_start_with">Host name cannot start with \"%s\"</string>
    <string name="nsu_iae_cannot_end_with">Host name cannot end with \"%s\"</string>
    <string name="nsu_iae_cannot_contain">Host name cannot contain \"%s\"</string>
    <string name="nsu_iae_requires_conversion">Host name \"%s\" requires conversion to ASCII but the conversion library is unavailable in this Android version</string>
    <string name="i2ptunnel_type_client">Standard client</string>
    <string name="i2ptunnel_type_httpclient">HTTP client</string>
    <string name="i2ptunnel_type_ircclient">IRC client</string>
    <string name="i2ptunnel_type_server">Standard server</string>
    <string name="i2ptunnel_type_httpserver">HTTP server</string>
    <string name="i2ptunnel_type_sockstunnel">SOCKS 4/4a/5 proxy</string>
    <string name="i2ptunnel_type_socksirctunnel">SOCKS IRC proxy</string>
    <string name="i2ptunnel_type_connectclient">CONNECT/SSL/HTTPS proxy</string>
    <string name="i2ptunnel_type_ircserver">IRC server</string>
    <string name="i2ptunnel_type_streamrclient">Streamr client</string>
    <string name="i2ptunnel_type_streamrserver">Streamr server</string>
    <string name="i2ptunnel_type_httpbidirserver">HTTP bidir</string>
    <string name="i2ptunnel_not_initialized">Tunnels are not initialized yet, please reload in two minutes.</string>
    <string name="i2ptunnel_new_tunnel">New Tunnel</string>
    <string name="i2ptunnel_msg_config_saved">Configuration changes saved</string>
    <string name="i2ptunnel_msg_config_save_failed">Failed to save configuration</string>
    <string name="i2ptunnel_msg_tunnel_starting">Starting tunnel</string>
    <string name="i2ptunnel_msg_tunnel_stopping">Stopping tunnel</string>
    <string name="i2ptunnel_delete_confirm_message">Delete tunnel?</string>
    <string name="i2ptunnel_delete_confirm_button">Delete tunnel</string>
    <string name="i2ptunnel_wizard_k_client_server">Client or Server</string>
    <string name="i2ptunnel_wizard_v_client">Client tunnel</string>
    <string name="i2ptunnel_wizard_v_server">Server tunnel</string>
    <string name="i2ptunnel_wizard_k_type">Tunnel type</string>
    <string name="i2ptunnel_wizard_k_name">Name</string>
    <string name="i2ptunnel_wizard_k_desc">Description</string>
    <string name="i2ptunnel_wizard_k_dest">Destination</string>
    <string name="i2ptunnel_wizard_k_outproxies">Outproxies</string>
    <string name="i2ptunnel_wizard_k_target_host">Target host</string>
    <string name="i2ptunnel_wizard_k_target_port">Target port</string>
    <string name="i2ptunnel_wizard_k_reachable_on">Reachable on</string>
    <string name="i2ptunnel_wizard_k_binding_port">Binding port</string>
    <string name="i2ptunnel_wizard_k_auto_start">Auto start</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit</string>
</resources>