<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:key="settings_transports"
        android:title="@string/settings_label_transports">

    <PreferenceCategory
        android:key="settings_ntcp"
        android:title="NTCP">
    <CheckBoxPreference
        android:key="i2np.ntcp.enable"
        android:defaultValue="true"
        android:title="@string/settings_enable"
        />
    <!--
    i2np.ntcp.maxConnections=24
    -->
    <com.hlidskialf.android.preference.SeekBarPreference
        android:key="i2np.ntcp.maxConnections"
        android:defaultValue="32"
        android:max="250"
        android:title="@string/settings_label_maxConns"
        android:summary="Maximum NTCP connections allowed (default=32)"
        android:dialogMessage="Maximum NTCP connections"
        android:text=" connections"
        android:dependency="i2np.ntcp.enable"
        android:shouldDisableView="true"
        />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="settings_udp"
        android:title="UDP">
    <!--
    i2np.udp.enable=false
    I might hide this one...
    -->
    <CheckBoxPreference
        android:key="i2np.udp.enable"
        android:defaultValue="true"
        android:title="@string/settings_enable"
        android:summary="DO NOT DISABLE THIS"
        />

    <!--
    i2np.udp.maxConnections=12
    -->
    <com.hlidskialf.android.preference.SeekBarPreference
        android:key="i2np.udp.maxConnections"
        android:defaultValue="32"
        android:max="500"
        android:title="@string/settings_label_maxConns"
        android:summary="Maximum UDP connections allowed"
        android:dialogMessage="Maximum UDP connections"
        android:text=" connections"
        android:dependency="i2np.udp.enable"
        android:shouldDisableView="true"
        />
    </PreferenceCategory>
    </PreferenceScreen>

    <!--
    i2cp.disableInterface=true
    -->
    <CheckBoxPreference
        android:key="i2cp.disableInterface"
        android:defaultValue="false"
        android:title="@string/settings_label_i2cp"
        android:summary="@string/settings_desc_i2cp"
        />

    <PreferenceScreen
        android:key="settings_exploratory_pool"
        android:title="@string/settings_label_exploratory_pool"
        android:summary="@string/settings_desc_exploratory_pool">

    <PreferenceCategory
        android:key="settings_expl_inbound"
        android:title="@string/settings_label_expl_inbound">
    <!--
    router.inboundPool.length=1
    -->
    <ListPreference
        android:key="router.inboundPool.length"
        android:entries="@array/setting0to3"
        android:entryValues="@array/setting0to3"
        android:title="@string/settings_label_expl_length"
        android:summary="@string/settings_summ_expl_length"
        android:dialogTitle="@string/settings_desc_expl_length"
        android:defaultValue="2"
    />

    <!--
    router.inboundPool.lengthVariance=1
    -->
    <ListPreference
        android:key="router.inboundPool.lengthVariance"
        android:entries="@array/setting2to2"
        android:entryValues="@array/setting2to2"
        android:title="@string/settings_label_expl_lengthVariance"
        android:summary="@string/settings_summ_expl_lengthVariance"
        android:dialogTitle="@string/settings_desc_expl_lengthVariance"
        android:defaultValue="0"
    />


    <!--
    router.inboundPool.quantity=2
    -->
    <ListPreference
        android:key="router.inboundPool.quantity"
        android:entries="@array/setting0to3"
        android:entryValues="@array/setting0to3"
        android:title="@string/settings_label_expl_quantity"
        android:summary="@string/settings_summ_expl_quantity"
        android:dialogTitle="@string/settings_desc_expl_quantity"
        android:defaultValue="2"
    />

    <!--
    router.inboundPool.backupQuantity=0
    -->
    <ListPreference
        android:key="router.inboundPool.backupQuantity"
        android:entries="@array/setting0to3"
        android:entryValues="@array/setting0to3"
        android:title="@string/settings_label_expl_backupQuantity"
        android:summary="@string/settings_summ_expl_backupQuantity"
        android:dialogTitle="@string/settings_desc_expl_backupQuantity"
        android:defaultValue="0"
    />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="settings_expl_outbound"
        android:title="@string/settings_label_expl_outbound">
    <!--
    router.outboundPool.length=1
    -->
    <ListPreference
        android:key="router.outboundPool.length"
        android:entries="@array/setting0to3"
        android:entryValues="@array/setting0to3"
        android:title="@string/settings_label_expl_length"
        android:summary="@string/settings_summ_expl_length"
        android:dialogTitle="@string/settings_desc_expl_length"
        android:defaultValue="2"
    />

    <!--
    router.outboundPool.lengthVariance=1
    -->
    <ListPreference
        android:key="router.outboundPool.lengthVariance"
        android:entries="@array/setting2to2"
        android:entryValues="@array/setting2to2"
        android:title="@string/settings_label_expl_lengthVariance"
        android:summary="@string/settings_summ_expl_lengthVariance"
        android:dialogTitle="@string/settings_desc_expl_lengthVariance"
        android:defaultValue="0"
    />

    <!--
    router.outboundPool.quantity=2
    -->
    <ListPreference
        android:key="router.outboundPool.quantity"
        android:entries="@array/setting0to3"
        android:entryValues="@array/setting0to3"
        android:title="@string/settings_label_expl_quantity"
        android:summary="@string/settings_summ_expl_quantity"
        android:dialogTitle="@string/settings_desc_expl_quantity"
        android:defaultValue="2"
    />

    <!--
    router.outboundPool.backupQuantity=0
    -->
    <ListPreference
        android:key="router.outboundPool.backupQuantity"
        android:entries="@array/setting0to3"
        android:entryValues="@array/setting0to3"
        android:title="@string/settings_label_expl_backupQuantity"
        android:summary="@string/settings_summ_expl_backupQuantity"
        android:dialogTitle="@string/settings_desc_expl_backupQuantity"
        android:defaultValue="0"
    />
    </PreferenceCategory>
    </PreferenceScreen>


    <!--

    i2p.dir.pid=/data/data/net.i2p.android.router/files/tmp
    <EditTextPreference
        android:key=""
        android:defaultValue=""
        android:title=""
        />

    i2p.dir.temp=/data/data/net.i2p.android.router/files/tmp
    <EditTextPreference
        android:key=""
        android:defaultValue=""
        android:title=""
        />


    Futute super advanced options:
    prng.bufferSize=32768
    prng.buffers=2
    router.decayingBloomFilterM=20
    routerconsole.geoip.enable=false
    time.disabled=false


    No edit allowed for:
    router.newsLastChecked
    i2p.naming.impl
    router.firstInstalled
    router.firstVersion
    router.previousVersion
    router.updateLastInstalled
    stat.full
    -->

</PreferenceScreen>
