<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:i2pandroid="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/action_router_start"
          android:id="@+id/menu_start"
          android:icon="@drawable/ic_menu_play_clip"
          i2pandroid:showAsAction="ifRoom" >
    </item>
    <item android:title="@string/action_router_stop"
          android:id="@+id/menu_stop"
          android:icon="@android:drawable/ic_menu_close_clear_cancel"
          i2pandroid:showAsAction="ifRoom" >
    </item>
    <item android:title="@string/label_addressbook"
          android:id="@+id/menu_addressbook"
          android:icon="@drawable/ic_menu_friendslist" >
    </item>
    <item android:title="@string/action_reload"
          android:id="@+id/menu_reload"
          android:icon="@drawable/ic_menu_refresh"
          i2pandroid:showAsAction="ifRoom" >
    </item>
    <item android:title="@string/menu_settings"
          android:id="@+id/menu_settings"
          android:icon="@android:drawable/ic_menu_preferences"
          i2pandroid:showAsAction="never" >
    </item>
</menu>
