<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:contentDescription="@string/desc_i2p_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/i2plogo" />

    <Button
        android:id="@+id/router_start_button"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:text="@string/action_router_start"
        android:drawableLeft="@drawable/start_router_icon" />

    <Button
        android:id="@+id/router_quit_button"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:text="@string/action_router_stop"
        android:drawableLeft="@drawable/stop_router_icon" />
<!--
<Button
    android:id="@+id/router_stop_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="OLD STOP"
    android:drawableLeft="@drawable/stop_router_icon" />
-->

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:padding="10dp"
    android:scrollbarStyle="outsideInset"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_statistics"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/main_status_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>
</LinearLayout>
